finished layout of landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="header">
+  <div class="pageHeader">
     <div class="logo">Header Logo</div>
     <ul class="link">
       <li><a href="https://www.google.com">Link 1</a></li>
@@ -57,7 +57,12 @@
     </div>
 
     <div class="body3">
-      <div class="quote">This is a random quote</div>
+      <div class="quote">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna 
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+        ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </div>
       <div class="quoteAuthor">-Author</div>
     </div>
 
@@ -65,7 +70,7 @@
       <div class="box">
         <div class="txt">
           <div class="header">Call to action</div>
-          <div class="subtxt">This is a subtext to call to action</div>
+          <div class="subtext">This is a subtext to call to action</div>
         </div>
         <button class="signUp">Sign Up</button>
       </div>
